--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - v10
-  - v8
-  - v6
-  - v4
+  - 10
+branches:
+  only:
+    - master
+install:
+  - npm install
+script:
+  - npm test
