--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,5 +1,5 @@
 {
-  "generator-node": {
+  "generator-lib": {
     "promptValues": {
       "authorName": "wenye",
       "authorEmail": "1583247975@qq.com",
