--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-wenye",
-  "version": "2.2.1",
+  "version": "3.0.1",
   "description": "wenye专属的yo脚手架",
   "homepage": "https://github.com/wenye123/generator-wenye",
   "author": {
@@ -18,26 +18,31 @@
     "wenye",
     "yeoman-generator"
   ],
+  "repository": "wenye123/generator-wenye",
+  "license": "Apache-2.0",
+  "scripts": {
+    "pretest": "prettier --write \"./**/*.{js,ts,json,yaml}\"",
+    "test": "jest"
+  },
+  "dependencies": {
+    "chalk": "^2.1.0",
+    "yeoman-generator": "^2.0.1",
+    "yosay": "^2.0.1"
+  },
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
-    "yeoman-assert": "^3.1.0",
     "coveralls": "^3.0.5",
     "eslint": "^6.0.1",
-    "prettier": "^1.18.2",
-    "husky": "^3.0.1",
-    "lint-staged": "^9.2.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-config-xo": "^0.26.0",
-    "jest": "^24.8.0"
+    "husky": "^3.0.1",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.18.2",
+    "yeoman-assert": "^3.1.0",
+    "yeoman-test": "^1.7.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
-  },
-  "dependencies": {
-    "yeoman-generator": "^2.0.1",
-    "chalk": "^2.1.0",
-    "yosay": "^2.0.1"
   },
   "jest": {
     "testEnvironment": "node"
@@ -54,12 +59,12 @@
   },
   "eslintConfig": {
     "extends": [
-      "xo",
       "prettier"
     ],
     "env": {
       "jest": true,
-      "node": true
+      "node": true,
+      "es6": true
     },
     "rules": {
       "prettier/prettier": "error"
@@ -67,11 +72,5 @@
     "plugins": [
       "prettier"
     ]
-  },
-  "scripts": {
-    "pretest": "prettier --write \"./**/*.{js,ts,json,yaml}\"",
-    "test": "jest"
-  },
-  "repository": "wenye123/generator-wenye",
-  "license": "Apache-2.0"
+  }
 }
